third_party/blink/renderer/core/css/properties/longhands/r_custom.cc
@@ -13,8 +13,8 @@ namespace CSSLonghand {
 const CSSValue* R::ParseSingleValue(CSSParserTokenRange& range,
                                     const CSSParserContext& context,
                                     const CSSParserLocalContext&) const {
-  return css_property_parser_helpers::ConsumeSVGGeometryPropertyLength(range,
-                                                                       context);
+  return css_property_parser_helpers::ConsumeSVGGeometryPropertyLength(
+      range, context, kValueRangeNonNegative);
 }
 
 const CSSValue* R::CSSValueFromComputedStyleInternal(
