third_party/blink/renderer/core/css/properties/longhands/rx_custom.cc
@@ -15,8 +15,8 @@ const CSSValue* Rx::ParseSingleValue(CSSParserTokenRange& range,
                                      const CSSParserLocalContext&) const {
   if (range.Peek().Id() == CSSValueAuto)
     return css_property_parser_helpers::ConsumeIdent(range);
-  return css_property_parser_helpers::ConsumeSVGGeometryPropertyLength(range,
-                                                                       context);
+  return css_property_parser_helpers::ConsumeSVGGeometryPropertyLength(
+      range, context, kValueRangeNonNegative);
 }
 
 const CSSValue* Rx::CSSValueFromComputedStyleInternal(
